Fixed issue with alignment on double number memories/scrapbooks

--- a/app/assets/stylesheets/temporary.css.sass
+++ b/app/assets/stylesheets/temporary.css.sass
@@ -1748,8 +1748,12 @@ header .navbar .navbar-collapse ul.nav li a.feedback
 
   .actions
     .viewingInfo
-      display: block
+      display: block !important
       padding-bottom: 1em
+
+      strong
+        display: block !important
+        padding-bottom: 0.25em
 
       a, span
         padding: 0.25em 0.5em
